added some html and css to the first dish-card

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 
 <body>
 
+    <main class="card-container">
+        <article class="card">
+            <img class="background-image" src="/assets/Papper_TP.png" alt="background-image">
+            <img class="food-image" src="assets/food-example.jpg" alt="food">
+            <h2 class="food-name">Köttfärsås</h2>
+            <p class="food-info">* Lactose free</p>
+            <div class="order-container">
+                <button class="order-button">Order</button>
+                <p class="price">99$</p>
+            </div>
+        </article>
+    </main>
+
 </body>
 
 </html>
