Added html and css for header

--- a/index.html
+++ b/index.html
@@ -1,17 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kraken inn</title>
     <script src="app.js" defer></script>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
-
-</body>
-
+  <body>
+    <header class="page-header">
+      <div class="header-top">
+        <h1 class="top-title">Kraken inn</h1>
+        <img
+          class="top-flag"
+          src="assets/images/icons/swedish-flag.png"
+          alt="flag" />
+        <div class="top-cart">
+          <img
+            class="cart-img"
+            src="assets/images/icons/chest.png"
+            alt="cart" />
+          <div class="cart-amount">
+            <p class="amount-text">0</p>
+          </div>
+        </div>
+      </div>
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <button class="list-btn" name="home">
+            <img
+              class="btn-img"
+              src="assets/images/icons/pirate-ship.png"
+              alt="home" />
+          </button>
+          <button class="list-btn" name="vegetarian">
+            <img
+              class="btn-img"
+              src="assets/images/icons/carrot.png"
+              alt="vegetarian" />
+          </button>
+          <button class="list-btn" name="fish">
+            <img
+              class="btn-img"
+              src="assets/images/icons/fish.png"
+              alt="fish" />
+          </button>
+          <button class="list-btn" name="meat">
+            <img
+              class="btn-img"
+              src="assets/images/icons/steak.png"
+              alt="meat" />
+          </button>
+          <button class="list-btn" name="drinks">
+            <img
+              class="btn-img"
+              src="assets/images/icons/ale-keg.png"
+              alt="drinks" />
+          </button>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
