--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kraken inn</title>
     <script src="app.js" defer></script>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="shoppingCart.css" />
+  </head>
 
-<body>
-
-</body>
-
+  <body>
+    <section class="cart-container">
+      <h1 class="cart-header">Din varukorg</h1>
+      <div class="total-price-container">
+        <h2 class="total-price">Totalt pris (inkl.moms)</h2>
+        <p class="price">(Totalt pris)</p>
+      </div>
+      <article class="dish-article">
+        <h3 class="dish">Köttfärssås</h3>
+        <p class="price">100kr</p>
+      </article>
+      <button class="place-order-btn">Beställ</button>
+      <img class="paper" src="assets/Papper_TP.png" alt="" />
+    </section>
+  </body>
 </html>
