--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </head>
 
   <body>
+    <img class="paper" src="assets/Papper_TP.png" alt="" />
     <section class="cart-container">
       <h1 class="cart-header">Din varukorg</h1>
+      <div class="line"></div>
       <div class="total-price-container">
         <h2 class="total-price">Totalt pris (inkl.moms)</h2>
         <p class="price">(Totalt pris)</p>
@@ -21,8 +23,9 @@
         <h3 class="dish">Köttfärssås</h3>
         <p class="price">100kr</p>
       </article>
-      <button class="place-order-btn">Beställ</button>
-      <img class="paper" src="assets/Papper_TP.png" alt="" />
+      <div class="place-order">
+        <button class="place-order-btn">Beställ</button>
+      </div>
     </section>
   </body>
 </html>
