--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <img class="paper" src="assets/Papper_TP.png" alt="" />
     <section class="cart-container">
+      <img class="paper" src="assets/Papper_TP.png" alt="" />
       <h1 class="cart-header">Din varukorg</h1>
       <div class="line"></div>
       <div class="total-price-container">
@@ -23,8 +23,12 @@
         <h3 class="dish">Köttfärssås</h3>
         <p class="price">100kr</p>
       </article>
+      <article class="dish-article">
+        <h3 class="dish">Potatisgratäng</h3>
+        <p class="price">100kr</p>
+      </article>
       <div class="place-order">
-        <button class="place-order-btn">Beställ</button>
+        <button class="order-btn">Beställ</button>
       </div>
     </section>
   </body>
