--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kraken inn</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon-anchor.ico?">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon-anchor.ico?" />
     <script src="app.js" defer></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap"
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -19,6 +21,10 @@
     <header class="page-header">
       <div class="header-top">
         <h1 class="top-title">Kraken inn</h1>
+        <img
+          class="top-search"
+          src="assets/images/icons/spyglass.png"
+          alt="search" />
         <img
           class="top-flag"
           src="assets/images/icons/swedish-flag.png"
