Removed comments in html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="header-top">
         <h1 class="top-title">Kraken inn</h1>
         <img
@@ -74,7 +74,7 @@
         </ul>
       </nav>
     </header>
-    <main class="card-container"></main> -->
+    <main class="card-container"></main>
 
     <section class="cart-container">
       <img class="paper" src="assets/Papper_TP.png" alt="" />
