--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/assets/favicon-anchor.ico?" />
     <script src="assets/scripts/db.js" defer></script>
     <script src="app.js" defer></script>
+    <script src="assets/scripts/language.js" defer></script>
     <link rel="stylesheet" href="assets/styles/styles.css" />
     <link rel="stylesheet" href="assets/styles/shoppingCart.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
