--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="assets/scripts/db.js" defer></script>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="assets/styles/styles.css" />
-    <link rel="stylesheet" href="assets/styles/receit.css" />
+    <link rel="stylesheet" href="assets/styles/receipt.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -82,7 +82,7 @@
       <h1 class="heading">Dina köp</h1>
       <div class="line"></div>
       <div class="inside-paper">
-        <article class="cart-items">
+        <!-- <article class="cart-items">
           <img
             class="item-img"
             src="assets/photo-1600891964599-f61ba0e24092.jpg"
@@ -93,7 +93,7 @@
           </div>
           <div class="count">1</div>
           <div class="price">100kr</div>
-        </article>
+        </article> -->
 
         <div class="line"></div>
 
@@ -101,9 +101,9 @@
           <div class="total">
             <div>
               <div class="subtotal">Total kostnad:</div>
-              <div class="items">2 varor</div>
+              <div class="items">varor:</div>
             </div>
-            <div class="total-amount">250kr</div>
+            <div class="total-amount"></div>
           </div>
         </div>
       </div>
