--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <nav class="header-nav">
         <ul class="nav-list">
-          <button class="list-btn" name="home">
+          <button class="list-btn featured-btn" name="home">
             <img
               class="btn-img"
               src="assets/images/icons/pirate-ship.png"
