--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kraken inn</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon-anchor.ico?" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon-anchor.ico?" />
     <script src="assets/scripts/db.js" defer></script>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="assets/styles/styles.css" />
