--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kraken inn</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon-anchor.ico?" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon-anchor.ico?" />
     <link rel="stylesheet" href="../styles/styles.css" />
     <script src="../scripts/login.js" defer></script>
     <link
