--- a/index.html
+++ b/index.html
@@ -1,103 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kraken inn</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon-anchor.ico?" />
-    <script src="assets/scripts/db.js" defer></script>
-    <script src="app.js" defer></script>
-    <link rel="stylesheet" href="assets/styles/styles.css" />
-    <link rel="stylesheet" href="assets/styles/receipt.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap"
-      rel="stylesheet" />
-  </head>
 
-  <body>
-    <header class="page-header">
-      <div class="header-top">
-        <h1 class="top-title">Kraken inn</h1>
-        <img
-          class="top-search"
-          src="assets/images/icons/spyglass.png"
-          alt="search" />
-        <img
-          class="top-flag"
-          src="assets/images/icons/swedish-flag.png"
-          alt="flag" />
-        <div class="top-cart">
-          <img
-            class="cart-img"
-            src="assets/images/icons/chest.png"
-            alt="cart" />
-          <div class="cart-amount">
-            <p class="amount-text">0</p>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kraken inn</title>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon-anchor.ico?" />
+  <script src="assets/scripts/db.js" defer></script>
+  <script src="app.js" defer></script>
+  <link rel="stylesheet" href="assets/styles/styles.css" />
+  <link rel="stylesheet" href="assets/styles/receipt.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="page-header">
+    <div class="header-top">
+      <h1 class="top-title">Kraken inn</h1>
+      <img class="top-search" src="assets/images/icons/spyglass.png" alt="search" />
+      <img class="top-flag" src="assets/images/icons/swedish-flag.png" alt="flag" />
+      <div class="top-cart">
+        <img class="cart-img" src="assets/images/icons/chest.png" alt="cart" />
+        <div class="cart-amount">
+          <p class="amount-text">0</p>
         </div>
       </div>
-      <nav class="header-nav">
-        <ul class="nav-list">
-          <button class="list-btn featured-btn" name="home">
-            <img
-              class="btn-img"
-              src="assets/images/icons/pirate-ship.png"
-              alt="home" />
-          </button>
-          <button class="list-btn" name="meat">
-            <img
-              class="btn-img"
-              src="assets/images/icons/steak.png"
-              alt="meat" />
-          </button>
-          <button class="list-btn" name="dessert">
-            <img
-              class="btn-img"
-              src="assets/images/icons/pie-dessert.png"
-              alt="dessert" />
-          </button>
-          <button class="list-btn" name="sandwich">
-            <img
-              class="btn-img"
-              src="assets/images/icons/sandwich.png"
-              alt="sandwiches" />
-          </button>
+    </div>
+    <nav class="header-nav">
+      <ul class="nav-list">
+        <button class="list-btn featured-btn" name="home">
+          <img class="btn-img" src="assets/images/icons/pirate-ship.png" alt="home" />
+          <p>Highlights</p>
+        </button>
+        <button class="list-btn" name="meat">
+          <img class="btn-img" src="assets/images/icons/steak.png" alt="meat" />
+          <p>Bbq</p>
+        </button>
+        <button class="list-btn" name="dessert">
+          <img class="btn-img" src="assets/images/icons/pie-dessert.png" alt="dessert" />
+          <p>Desserts</p>
+        </button>
+        <button class="list-btn" name="sandwich">
+          <img class="btn-img" src="assets/images/icons/sandwich.png" alt="sandwiches" />
+          <p>Sandwiches</p>
+        </button>
 
-          <button class="list-btn" name="drinks">
-            <img
-              class="btn-img"
-              src="assets/images/icons/ale-keg.png"
-              alt="drinks" />
-          </button>
-        </ul>
-      </nav>
-    </header>
-    <main class="card-container"></main>
+        <button class="list-btn" name="drinks">
+          <img class="btn-img" src="assets/images/icons/ale-keg.png" alt="drinks" />
+          <p>Drinks</p>
+        </button>
+      </ul>
+    </nav>
+  </header>
+  <main class="card-container"></main>
 
-    <section class="cart-container">
-      <img class="paper" src="assets/Papper_TP.png" alt="" />
-      <h1 class="heading">Dina köp</h1>
+  <section class="cart-container">
+    <img class="paper" src="assets/Papper_TP.png" alt="" />
+    <h1 class="heading">Dina köp</h1>
+    <div class="line"></div>
+    <div class="inside-paper">
       <div class="line"></div>
-      <div class="inside-paper">
-        <div class="line"></div>
 
-        <div class="checkout">
-          <div class="total">
-            <div>
-              <div class="subtotal">Total kostnad:</div>
-              <div class="items">
-                varor:
-                <p class="item-amount">0</p>
-              </div>
+      <div class="checkout">
+        <div class="total">
+          <div>
+            <div class="subtotal">Total kostnad:</div>
+            <div class="items">
+              varor:
+              <p class="item-amount">0</p>
             </div>
-            <div class="total-amount"></div>
           </div>
+          <div class="total-amount"></div>
         </div>
       </div>
-      <div class="black-background"></div>
-    </section>
-  </body>
+    </div>
+    <div class="black-background"></div>
+  </section>
+</body>
+
 </html>
