Added saldo text

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
 
     <section class="cart-container">
       <img class="paper" src="assets/Papper_TP.png" alt="" />
-      <h1 class="heading">Dina köp</h1>
+      <div class="tab-heading">
+        <h1 class="heading">Dina köp</h1>
+        <h1 class="balance">Saldo:</h1>
+      </div>
       <div class="line"></div>
       <div class="inside-paper">
         <div class="line"></div>
