added balance to receipt

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <img class="paper" src="assets/Papper_TP.png" alt="" />
       <div class="tab-heading">
         <h1 class="heading">Dina köp</h1>
-        <h1 class="balance">Saldo:</h1>
+        <h1 class="balance">Saldo:<span>500</span></h1>
       </div>
       <div class="line"></div>
       <div class="inside-paper">
